--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -12,6 +12,7 @@
     <tr>
       <th>
         <button type="button" class="btn btn-outline-light btn-sm" (click)="alteraImg()">
+          <i class="{{!exibirImg ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
           {{!exibirImg ? 'exibir' : 'ocultar'}}
         </button>
       </th>
@@ -30,19 +31,23 @@
         <img [collapse]="!exibirImg" [isAnimated]="true" src="/assets/{{evento.imagemURL}}" [style.width.px]="widthImg"
           [style.margin.px]="marginImg">
       </td>
-      <td>{{evento.eventoId}}</td>
+      <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateTimeFormatPipe}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lotes[0].nome}}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-primary btn-sm mr-2">
+          <i class="fa fa-edit"></i>
+          Editar</button>
+        <button type="button" class="btn btn-danger btn-sm">
+          <i class="fa fa-trash"></i>
+          Excluir</button>
       </td>
     </tr>
   </tbody>
-  <tfoot *ngIf="!eventos && !eventos.length">
+  <tfoot *ngIf="!eventos.length">
     <tr>
       <td colspan="8" class="text-center">
         <h4>Nenhum evento encontrado!</h4>
